Fix legal agreement text in signview on small screens. CORE-773

--- a/frontend/app/less/signview/sign.less
+++ b/frontend/app/less/signview/sign.less
@@ -123,5 +123,6 @@
     list-style: inside;
     padding-left: 10px;
     margin-bottom: 20px;
+    white-space: normal;
   }
 }
